--- a/css/portfoliostyle.css
+++ b/css/portfoliostyle.css
@@ -1,5 +1,11 @@
 /* General Style */
 
+#Hangman {
+    padding: 2px 0px 0px 0px;
+    text-decoration: none;
+    color: #ec184d;
+}
+
 .card.mb-3 {
     margin: 50px 0px 50px 0px;
     margin-bottom: 1000px;
