adding Trivia Game

--- a/css/portfoliostyle.css
+++ b/css/portfoliostyle.css
@@ -6,6 +6,18 @@
     color: #ec184d;
 }
 
+#Crystal {
+    padding: 2px 0px 0px 0px;
+    text-decoration: none;
+    color: #ec184d;
+}
+
+#Trivia {
+    padding: 2px 0px 0px 0px;
+    text-decoration: none;
+    color: #ec184d;
+}
+
 .card.mb-3 {
     margin: 50px 0px 50px 0px;
     margin-bottom: 1000px;
