--- a/css/contactstyle.css
+++ b/css/contactstyle.css
@@ -1,5 +1,28 @@
 /* General Style */
 
+body {
+    font-family: D-DINExp, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, sans-serif !important;
+}
+
+#contact {
+    font-weight: bolder;
+}
+
+.active {
+    color: #ec184d !important;
+    font-weight: bolder;
+}
+
+.nav-link:hover {
+    cursor: pointer !important;
+    /* font-size: larger; */
+    color: #ec184d !important;
+}
+
+.nav-link {
+    font-size: 20px;
+}
+
 .card {
     margin: 50px 0px 50px 0px;
     margin-bottom: 1000px;
@@ -49,4 +72,9 @@ h1 {
 footer {
     margin-top: 100px;
     border-top: 5px solid #ec184d;
+}
+
+.social {
+    margin-top: 30px;
+    margin-bottom: 50px;
 }
