--- a/css/indexstyle.css
+++ b/css/indexstyle.css
@@ -1,5 +1,54 @@
 /* General Style */
 
+body {
+    font-family: D-DINExp, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, sans-serif !important;
+}
+
+#about-me {
+    font-weight: bolder;
+}
+
+.jumbotron {
+    font-family: D-DINExp, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, sans-serif;
+    color: white;
+    margin-top: 50px;
+    background: url(../images/elaine-casap-82gJggDId-U-unsplash.jpg);
+    height: 600px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#jumbo-btn {
+    background-color: white !important;
+    border: none;
+    color: black;
+}
+
+#out-head {
+    color: white;
+    font-weight: bolder;
+}
+
+.jumbotron .container {
+    position: relative;
+    top: 50px;
+}
+
+.active {
+    color: #ec184d !important;
+    font-weight: bolder;
+}
+
+.nav-link:hover {
+    cursor: pointer !important;
+    /* font-size: larger; */
+    color: #ec184d !important;
+}
+
+.nav-link {
+    font-size: 20px;
+}
+
 .card {
     margin: 50px 0px 50px 0px;
     margin-bottom: 1000px;
